@@ -1,6 +1,9 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.171 2008-01-09 16:49:23 remko Exp $
+	$Id: ChangeLog,v 1.172 2008-01-15 20:29:15 guru Exp $
 -----------------------------------------------------------------------------------------
+
+2008-01-15	pwessel
+	* mgd77/mgd77.c:	Wrong header order written if mgd77convert .. -Tt was used
 
 2008-01-09	remko
 	* gmt_init.c:		Fixed "Holiday-bug" in GMT_parse_J_option introduced 2007-12-21.
